--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>VertiCard Gallery Page</title>
+  <title>Furkan Demirtaş</title>
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" />
   <link rel="stylesheet" href="css/bootstrap.min.css" />
@@ -52,11 +52,11 @@
               </div>
               <div class="col-sm-6" style="width: 16rem;">
                 <div class="card-body">
-                  <h5 class="card-title">Card <title></title></h5>
-                  <h6 class="card-subtitle mb-2 text-muted">Card</h6>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <center><a href="#" class="btn btn-info">Github Reposu</a></center>
-                  <center><a href="#" class="mt-2 btn btn-info ">Canlı Demosu</a></center>
+                  <h5 class="card-title">React Uygulama <title></title></h5>
+                  <br>
+                  <p class="card-text">React ile Sepet ve Para Harcama Uygulması</p>
+                  <center><a href="https://github.com/furkanjp/expenseReactApp" class="btn btn-info">Github Reposu</a></center>
+                  <center><a href="https://furkanjp.github.io/expenseReactApp/" class="mt-2 btn btn-info ">Canlı Demosu</a></center>
                 </div>
               </div>
               <div class="col-sm-6" style="width: 20rem;">
