--- a/index.html
+++ b/index.html
@@ -13,15 +13,16 @@
     <main>
         <div class="gallery">
             <div class="image-item">
-                <img src="C:/Users/KullanıcıAdı/Resimler/Görseller/8683595000215.jpg" alt="Ürün 1">
+                <img src="assets/class-1.jpg" alt="class" class="class__img-1">
+              
                 <p>Ürün 1</p>
             </div>
             <div class="image-item">
-                <img src="C:/Users/KullanıcıAdı/Resimler/Görseller/8683595000216.jpg" alt="Ürün 2">
+                <img src="assets/class-1.jpg" alt="class" class="class__img-1">
                 <p>Ürün 2</p>
             </div>
             <div class="image-item">
-                <img src="C:/Users/KullanıcıAdı/Resimler/Görseller/8683595000217.jpg" alt="Ürün 3">
+               <img src="assets/class-1.jpg" alt="class" class="class__img-1">
                 <p>Ürün 3</p>
             </div>
         </div>
