--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <main>
         <div class="gallery">
             <div class="image-item">
-                <img src="assets/class-1.jpg" alt="class" class="class__img-1">
+                <img src="assets/8683595022965_2.jpg" alt="class" class="class__img-1">
               
                 <p>Ürün 1</p>
             </div>
